# docker-googletest-cpp-project

./: .dockerignore  .gitlab-ci.yml  CMakeCache.txt  CMakeLists.txt  DartConfiguration.tcl  Dockerfile  Dockerfile.jenkins  Jenkinsfile  README.md  docker-compose.yml  plugins.txt
.github/workflows/: docker-cpp-tests.yml
build-asan/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  build.ninja  calculator_cli  calculator_tests[1]_include.cmake  calculator_tests[1]_tests.cmake  cmake_install.cmake
build-asan/Testing/Temporary/: CTestCostData.txt
build-asan/test-results/: CalculatorServiceMockTest.LogsFailureWhenExpressionIsInvalid.xml  CalculatorServiceMockTest.LogsSuccessWhenExpressionIsValid.xml  CalculatorTest.AddsTwoPositiveNumbers.xml  CalculatorTest.DividesTwoNumbers.xml  CalculatorTest.MultipliesByZero.xml  CalculatorTest.SubtractsNumbers.xml  CalculatorTest.ThrowsWhenDividingByZero.xml  ExpressionParserTest.EvaluatesAdditionExpression.xml  ExpressionParserTest.HandlesNegativeLeftOperand.xml  ExpressionParserTest.IgnoresSpaces.xml  ExpressionParserTest.RejectsUnknownExpression.xml
build-coverage/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  build.ninja  calculator_cli  calculator_tests[1]_include.cmake  calculator_tests[1]_tests.cmake  cmake_install.cmake
build-coverage/test-results/: CalculatorServiceMockTest.LogsFailureWhenExpressionIsInvalid.xml  CalculatorServiceMockTest.LogsSuccessWhenExpressionIsValid.xml  CalculatorTest.AddsTwoPositiveNumbers.xml  CalculatorTest.DividesTwoNumbers.xml  CalculatorTest.MultipliesByZero.xml  CalculatorTest.SubtractsNumbers.xml  CalculatorTest.ThrowsWhenDividingByZero.xml  ExpressionParserTest.EvaluatesAdditionExpression.xml  ExpressionParserTest.HandlesNegativeLeftOperand.xml  ExpressionParserTest.IgnoresSpaces.xml  ExpressionParserTest.RejectsUnknownExpression.xml
build-windows/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  calculator_cli.vcxproj  calculator_cli.vcxproj.filters  calculator_core.vcxproj  calculator_core.vcxproj.filters  calculator_tests.vcxproj  calculator_tests.vcxproj.filters  calculator_tests[1]_include.cmake  calculator_tests[1]_tests.cmake  cmake_install.cmake  cmake_test_discovery_a1a8f45eb9.json  docker_googletest_cpp.sln
build-windows/Debug/: calculator_core.lib
exercises/: README.md
include/: Calculator.hpp  ExpressionParser.hpp  OperationLogger.hpp
reports/: ctest-junit.xml
reports/clang-tidy/: clang-tidy.txt  fixes.yaml  index.html
reports/coverage/: index.Calculator.cpp.3dc12e77271f3d0e91ca7f13fbee774f.html  index.CalculatorService.cpp.709544fb54114cc6c675a4c8ae17da79.html  index.ExpressionParser.cpp.6e7c422d8340295900ed5dffb876fff4.html  index.OperationLogger.hpp.d10f03ca7987e789fa9f281269da6968.html  index.functions.html  index.html  index.main.cpp.7ec3c68a81efff79b6ca22ac1f1eabba.html
reports/cppcheck/: 0.html  1.html  cppcheck.xml  index.html  stats.html
reports/googletest/: index.html
reports/valgrind/: index.html  valgrind.xml
scripts/: analysis.ps1  build.sh  clang-tidy-to-html.py  coverage.ps1  docker-analysis.sh  docker-clang-tidy.sh  docker-coverage.sh  docker-jenkins.sh  docker-test.sh  docker-valgrind.sh  junit-to-html.py  run-clang-tidy-inside.sh  test.ps1  test.sh  valgrind-xml-to-html.py
solutions/: Calculator.cpp.patch.md  Calculator.hpp.patch.md  ExpressionParser.cpp.patch.md  README.md  Tests.patch.md
src/: Calculator.cpp  CalculatorService.cpp  ExpressionParser.cpp  main.cpp
tests/: CalculatorMockTest.cpp  CalculatorParameterizedTest.cpp  CalculatorTest.cpp  ExpressionParserTest.cpp
(+46 files in other folders)
